--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
     align-items: center;
 }
 .blogger-info-img {
-    background-image: url(./1.jpg);
+    background-image: url(https://cdn.jsdelivr.net/gh/csong01/picgo@master/1.jpg);
     margin-top: 50px;
     width: 125px;
     height: 125px;
